--- a/assignment1.qmd
+++ b/assignment1.qmd
@@ -10,7 +10,12 @@ Hello My name is Nihan. I hold my Bachelor's of Science in Electrical and Electr
 ## Math Operator 
 
 The + operator is used to add together two values:
+And the - operator is used for subtraction:
+The sqrt() function returns the square root of a number:
 
 ```{r}
 10 + 5
+10 - 5
+sqrt(16)
 ```
+
