--- a/inclass1.qmd
+++ b/inclass1.qmd
@@ -29,13 +29,13 @@ planes %>%
   print(n=Inf)
 
 ```
-Let's get the number of tail numbers for each year
+Let's get the number of plane numbers for each year
 
 ```{r}
 planes %>% 
   group_by(year) %>% 
   summarise(count=n()) %>% 
   arrange(year) %>% 
-  print(n=45)
+  print(n=Inf)
 
 ```
